# interpol

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
bash/: run_intel.sh  run_openmpi.sh
include/: interpol.h  sync.h  tsc.h
interpol-rs/: Cargo.toml  build.rs  cbindgen.toml
interpol-rs/src/: event.rs  interpol.rs  lib.rs  types.rs
interpol-rs/src/mpi_events/: mod.rs
interpol-rs/src/mpi_events/collectives/: mod.rs  mpi_ibcast.rs  mpi_igather.rs  mpi_ireduce.rs  mpi_iscatter.rs
interpol-rs/src/mpi_events/management/: mod.rs  mpi_finalize.rs  mpi_init.rs  mpi_init_thread.rs
interpol-rs/src/mpi_events/point_to_point/: mod.rs  mpi_irecv.rs  mpi_isend.rs  mpi_recv.rs  mpi_send.rs
interpol-rs/src/mpi_events/synchronization/: mod.rs  mpi_barrier.rs  mpi_ibarrier.rs  mpi_test.rs  mpi_wait.rs
json/: rank0_traces.json  rank10_traces.json  rank11_traces.json  rank12_traces.json  rank13_traces.json  rank14_traces.json  rank15_traces.json  rank16_traces.json  rank17_traces.json  rank18_traces.json  rank19_traces.json  rank1_traces.json  rank20_traces.json  rank21_traces.json  rank22_traces.json  rank23_traces.json  rank24_traces.json  rank25_traces.json  rank26_traces.json  rank27_traces.json  rank28_traces.json  rank29_traces.json  rank2_traces.json  rank30_traces.json  rank31_traces.json  rank32_traces.json  rank33_traces.json  rank34_traces.json  rank35_traces.json  rank36_traces.json  rank37_traces.json  rank38_traces.json  rank39_traces.json  rank3_traces.json  rank4_traces.json  rank5_traces.json  rank6_traces.json  rank7_traces.json  rank8_traces.json  (+1 more)
(+21 files in other folders)
