[package]
name = "interpol-rs"
version = "0.2.3"
edition = "2021"

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
derive_builder = "0.10.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5.2"
typetag = "0.1.8"

[lib]
crate-type = ["cdylib"] # shared library (.so)
