[package]
name = "interpol-rs"
version = "0.3.0"
edition = "2021"

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
derive_builder = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
typetag = "0.1"

[lib]
crate-type = ["cdylib"] # shared library (.so)

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
